# guild

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: affected.rs  cache.rs  cli.rs  discovery.rs  error.rs  init.rs  lib.rs  main.rs  output.rs  runner.rs
src/commands/: affected.rs  mod.rs  run.rs
src/config/: mod.rs  project.rs  types.rs  workspace.rs
src/graph/: mod.rs  project.rs  task.rs
tests/: affected_command_tests.rs  property_tests.rs  run_command_tests.rs
